parser.output
State 101 conflicts: 7 shift/reduce
State 102 conflicts: 7 shift/reduce
State 149 conflicts: 7 shift/reduce
State 150 conflicts: 7 shift/reduce
State 151 conflicts: 7 shift/reduce
State 152 conflicts: 7 shift/reduce
State 153 conflicts: 7 shift/reduce
State 154 conflicts: 7 shift/reduce
State 155 conflicts: 7 shift/reduce


Grammar

    0 $accept: program "EOF"

    1 program: body "end" subprograms

    2 body: declarations statements

    3 declarations: declarations type vars
    4             | declarations "record" fields "endrec" vars
    5             | declarations "data" vals
    6             | ε

    7 type: "int"
    8     | "real"
    9     | "logical"
   10     | "char"
   11     | "complex"

   12 vars: vars "comma" undef_variable
   13     | undef_variable

   14 undef_variable: "list" undef_variable
   15               | "id" "lparen" dims "rparen"
   16               | "id"

   17 dims: dims "comma" dim
   18     | dim

   19 dim: "iconst"
   20    | "id"

   21 fields: fields field
   22       | field

   23 field: type vars
   24      | "record" fields "endrec" vars

   25 vals: vals "comma" "id" value_list
   26     | "id" value_list

   27 value_list: "divop" values "divop"

   28 values: values "comma" value
   29       | value

   30 value: sign constant
   31      | "string"

   32 sign: "+ or -"
   33     | ε

   34 constant: simple_constant
   35         | complex_constant

   36 simple_constant: "iconst"
   37                | "rconst"
   38                | "lconst"
   39                | "cconst"

   40 complex_constant: "lparen" "rconst" "colon" sign "rconst" "rparen"

   41 statements: statements labeled_statement
   42           | labeled_statement

   43 labeled_statement: label statement
   44                  | statement

   45 label: "iconst"

   46 statement: simple_statement
   47          | compound_statement

   48 simple_statement: assignment
   49                 | goto_statement
   50                 | if_statement
   51                 | subroutine_call
   52                 | io_statement
   53                 | "continue"
   54                 | "return"
   55                 | "stop"

   56 assignment: variable "assign" expression
   57           | variable "assign" "string"

   58 variable: variable "dot" "id"
   59         | variable "lparen" expressions "rparen"
   60         | "listfunc" "lparen" expression "rparen"
   61         | "id"

   62 expressions: expressions "comma" expression
   63            | expression

   64 expression: expression "orop" expression
   65           | expression "andop" expression
   66           | expression ".GT. or .GE. or .LT. or .LE. or .EQ. or NE." expression
   67           | expression "+ or -" expression
   68           | expression "mulop" expression
   69           | expression "divop" expression
   70           | expression "powerop" expression
   71           | "notop" expression
   72           | "+ or -" expression
   73           | variable
   74           | simple_constant
   75           | "length" "lparen" expression "rparen"
   76           | "new" "lparen" expression "rparen"
   77           | "lparen" expression "rparen"
   78           | "lparen" expression "colon" expression "rparen"
   79           | listexpression

   80 listexpression: "lbrack" expressions "rbrack"
   81               | "lbrack" "rbrack"

   82 goto_statement: "goto" label
   83               | "goto" "id" "comma" "lparen" labels "rparen"

   84 labels: labels "comma" label
   85       | label

   86 if_statement: "if" "lparen" expression "rparen" label "comma" label "comma" label
   87             | "if" "lparen" expression "rparen" simple_statement

   88 subroutine_call: "call" variable

   89 io_statement: "read" read_list
   90             | "write" write_list

   91 read_list: read_list "comma" read_item
   92          | read_item

   93 read_item: variable
   94          | "lparen" read_list "comma" "id" "assign" iter_space "rparen"

   95 iter_space: expression "comma" expression step

   96 step: "comma" expression
   97     | ε

   98 write_list: write_list "comma" write_item
   99           | write_item

  100 write_item: expression
  101           | "lparen" write_list "comma" "id" "assign" iter_space "rparen"
  102           | "string"

  103 compound_statement: branch_statement
  104                   | loop_statement

  105 branch_statement: "if" "lparen" expression "rparen" "then" body tail

  106 tail: "else" body "endif"
  107     | "endif"

  108 loop_statement: "do" "id" "assign" iter_space body "enddo"

  109 subprograms: subprograms subprogram
  110            | ε

  111 subprogram: header body "end"

  112 header: type "function" "id" "lparen" formal_parameters "rparen"
  113       | "list" "function" "id" "lparen" formal_parameters "rparen"
  114       | "subroutine" "id" "lparen" formal_parameters "rparen"
  115       | "subroutine" "id"

  116 formal_parameters: type vars "comma" formal_parameters
  117                  | type vars


Terminals, with rules where they appear

    "EOF" (0) 0
    error (256)
    "function" (258) 112 113
    "subroutine" (259) 114 115
    "end" (260) 1 111
    "int" (261) 7
    "real" (262) 8
    "logical" (263) 9
    "char" (264) 10
    "complex" (265) 11
    "record" (266) 4 24
    "endrec" (267) 4 24
    "list" (268) 14 113
    "data" (269) 5
    "continue" (270) 53
    "goto" (271) 82 83
    "call" (272) 88
    "read" (273) 89
    "write" (274) 90
    "new" (275) 76
    "length" (276) 75
    "if" (277) 86 87 105
    "then" (278) 105
    "else" (279) 106
    "endif" (280) 106 107
    "do" (281) 108
    "enddo" (282) 108
    "stop" (283) 55
    "return" (284) 54
    "id" (285) 15 16 20 25 26 58 61 83 94 101 108 112 113 114 115
    "iconst" <intval> (286) 19 36 45
    "rconst" <rval> (287) 37 40
    "lconst" <lval> (288) 38
    "cconst" <charval> (289) 39
    "string" <strval> (290) 31 57 102
    "orop" (291) 64
    "andop" (292) 65
    "notop" (293) 71
    ".GT. or .GE. or .LT. or .LE. or .EQ. or NE." (294) 66
    "+ or -" (295) 32 67 72
    "mulop" (296) 68
    "divop" (297) 27 69
    "powerop" (298) 70
    "listfunc" (299) 60
    "lparen" (300) 15 40 59 60 75 76 77 78 83 86 87 94 101 105 112 113 114
    "rparen" (301) 15 40 59 60 75 76 77 78 83 86 87 94 101 105 112 113 114
    "comma" (302) 12 17 25 28 62 83 84 86 91 94 95 96 98 101 116
    "assign" (303) 56 57 94 101 108
    "dot" (304) 58
    "colon" (305) 40 78
    "lbrack" (306) 80 81
    "rbrack" (307) 80 81


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    program (54)
        on left: 1
        on right: 0
    body (55)
        on left: 2
        on right: 1 105 106 108 111
    declarations (56)
        on left: 3 4 5 6
        on right: 2 3 4 5
    type (57)
        on left: 7 8 9 10 11
        on right: 3 23 112 116 117
    vars (58)
        on left: 12 13
        on right: 3 4 12 23 24 116 117
    undef_variable (59)
        on left: 14 15 16
        on right: 12 13 14
    dims (60)
        on left: 17 18
        on right: 15 17
    dim (61)
        on left: 19 20
        on right: 17 18
    fields (62)
        on left: 21 22
        on right: 4 21 24
    field (63)
        on left: 23 24
        on right: 21 22
    vals (64)
        on left: 25 26
        on right: 5 25
    value_list (65)
        on left: 27
        on right: 25 26
    values (66)
        on left: 28 29
        on right: 27 28
    value (67)
        on left: 30 31
        on right: 28 29
    sign (68)
        on left: 32 33
        on right: 30 40
    constant (69)
        on left: 34 35
        on right: 30
    simple_constant (70)
        on left: 36 37 38 39
        on right: 34 74
    complex_constant (71)
        on left: 40
        on right: 35
    statements (72)
        on left: 41 42
        on right: 2 41
    labeled_statement (73)
        on left: 43 44
        on right: 41 42
    label (74)
        on left: 45
        on right: 43 82 84 85 86
    statement (75)
        on left: 46 47
        on right: 43 44
    simple_statement (76)
        on left: 48 49 50 51 52 53 54 55
        on right: 46 87
    assignment (77)
        on left: 56 57
        on right: 48
    variable (78)
        on left: 58 59 60 61
        on right: 56 57 58 59 73 88 93
    expressions (79)
        on left: 62 63
        on right: 59 62 80
    expression (80)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
        on right: 56 60 62 63 64 65 66 67 68 69 70 71 72 75 76 77 78 86 87 95 96 100 105
    listexpression (81)
        on left: 80 81
        on right: 79
    goto_statement (82)
        on left: 82 83
        on right: 49
    labels (83)
        on left: 84 85
        on right: 83 84
    if_statement (84)
        on left: 86 87
        on right: 50
    subroutine_call (85)
        on left: 88
        on right: 51
    io_statement (86)
        on left: 89 90
        on right: 52
    read_list (87)
        on left: 91 92
        on right: 89 91 94
    read_item (88)
        on left: 93 94
        on right: 91 92
    iter_space (89)
        on left: 95
        on right: 94 101 108
    step (90)
        on left: 96 97
        on right: 95
    write_list (91)
        on left: 98 99
        on right: 90 98 101
    write_item (92)
        on left: 100 101 102
        on right: 98 99
    compound_statement (93)
        on left: 103 104
        on right: 47
    branch_statement (94)
        on left: 105
        on right: 103
    tail (95)
        on left: 106 107
        on right: 105
    loop_statement (96)
        on left: 108
        on right: 104
    subprograms (97)
        on left: 109 110
        on right: 1 109
    subprogram (98)
        on left: 111
        on right: 109
    header (99)
        on left: 112 113 114 115
        on right: 111
    formal_parameters (100)
        on left: 116 117
        on right: 112 113 114 116


State 0

    0 $accept: • program "EOF"

    $default  reduce using rule 6 (declarations)

    program       go to state 1
    body          go to state 2
    declarations  go to state 3


State 1

    0 $accept: program • "EOF"

    "EOF"  shift, and go to state 4


State 2

    1 program: body • "end" subprograms

    "end"  shift, and go to state 5


State 3

    2 body: declarations • statements
    3 declarations: declarations • type vars
    4             | declarations • "record" fields "endrec" vars
    5             | declarations • "data" vals

    "int"       shift, and go to state 6
    "real"      shift, and go to state 7
    "logical"   shift, and go to state 8
    "char"      shift, and go to state 9
    "complex"   shift, and go to state 10
    "record"    shift, and go to state 11
    "data"      shift, and go to state 12
    "continue"  shift, and go to state 13
    "goto"      shift, and go to state 14
    "call"      shift, and go to state 15
    "read"      shift, and go to state 16
    "write"     shift, and go to state 17
    "if"        shift, and go to state 18
    "do"        shift, and go to state 19
    "stop"      shift, and go to state 20
    "return"    shift, and go to state 21
    "id"        shift, and go to state 22
    "iconst"    shift, and go to state 23
    "listfunc"  shift, and go to state 24

    type                go to state 25
    statements          go to state 26
    labeled_statement   go to state 27
    label               go to state 28
    statement           go to state 29
    simple_statement    go to state 30
    assignment          go to state 31
    variable            go to state 32
    goto_statement      go to state 33
    if_statement        go to state 34
    subroutine_call     go to state 35
    io_statement        go to state 36
    compound_statement  go to state 37
    branch_statement    go to state 38
    loop_statement      go to state 39


State 4

    0 $accept: program "EOF" •

    $default  accept


State 5

    1 program: body "end" • subprograms

    $default  reduce using rule 110 (subprograms)

    subprograms  go to state 40


State 6

    7 type: "int" •

    $default  reduce using rule 7 (type)


State 7

    8 type: "real" •

    $default  reduce using rule 8 (type)


State 8

    9 type: "logical" •

    $default  reduce using rule 9 (type)


State 9

   10 type: "char" •

    $default  reduce using rule 10 (type)


State 10

   11 type: "complex" •

    $default  reduce using rule 11 (type)


State 11

    4 declarations: declarations "record" • fields "endrec" vars

    "int"      shift, and go to state 6
    "real"     shift, and go to state 7
    "logical"  shift, and go to state 8
    "char"     shift, and go to state 9
    "complex"  shift, and go to state 10
    "record"   shift, and go to state 41

    type    go to state 42
    fields  go to state 43
    field   go to state 44


State 12

    5 declarations: declarations "data" • vals

    "id"  shift, and go to state 45

    vals  go to state 46


State 13

   53 simple_statement: "continue" •

    $default  reduce using rule 53 (simple_statement)


State 14

   82 goto_statement: "goto" • label
   83               | "goto" • "id" "comma" "lparen" labels "rparen"

    "id"      shift, and go to state 47
    "iconst"  shift, and go to state 23

    label  go to state 48


State 15

   88 subroutine_call: "call" • variable

    "id"        shift, and go to state 22
    "listfunc"  shift, and go to state 24

    variable  go to state 49


State 16

   89 io_statement: "read" • read_list

    "id"        shift, and go to state 22
    "listfunc"  shift, and go to state 24
    "lparen"    shift, and go to state 50

    variable   go to state 51
    read_list  go to state 52
    read_item  go to state 53


State 17

   90 io_statement: "write" • write_list

    "new"       shift, and go to state 54
    "length"    shift, and go to state 55
    "id"        shift, and go to state 22
    "iconst"    shift, and go to state 56
    "rconst"    shift, and go to state 57
    "lconst"    shift, and go to state 58
    "cconst"    shift, and go to state 59
    "string"    shift, and go to state 60
    "notop"     shift, and go to state 61
    "+ or -"    shift, and go to state 62
    "listfunc"  shift, and go to state 24
    "lparen"    shift, and go to state 63
    "lbrack"    shift, and go to state 64

    simple_constant  go to state 65
    variable         go to state 66
    expression       go to state 67
    listexpression   go to state 68
    write_list       go to state 69
    write_item       go to state 70


State 18

   86 if_statement: "if" • "lparen" expression "rparen" label "comma" label "comma" label
   87             | "if" • "lparen" expression "rparen" simple_statement
  105 branch_statement: "if" • "lparen" expression "rparen" "then" body tail

    "lparen"  shift, and go to state 71


State 19

  108 loop_statement: "do" • "id" "assign" iter_space body "enddo"

    "id"  shift, and go to state 72


State 20

   55 simple_statement: "stop" •

    $default  reduce using rule 55 (simple_statement)


State 21

   54 simple_statement: "return" •

    $default  reduce using rule 54 (simple_statement)


State 22

   61 variable: "id" •

    $default  reduce using rule 61 (variable)


State 23

   45 label: "iconst" •

    $default  reduce using rule 45 (label)


State 24

   60 variable: "listfunc" • "lparen" expression "rparen"

    "lparen"  shift, and go to state 73


State 25

    3 declarations: declarations type • vars

    "list"  shift, and go to state 74
    "id"    shift, and go to state 75

    vars            go to state 76
    undef_variable  go to state 77


State 26

    2 body: declarations statements •
   41 statements: statements • labeled_statement

    "continue"  shift, and go to state 13
    "goto"      shift, and go to state 14
    "call"      shift, and go to state 15
    "read"      shift, and go to state 16
    "write"     shift, and go to state 17
    "if"        shift, and go to state 18
    "do"        shift, and go to state 19
    "stop"      shift, and go to state 20
    "return"    shift, and go to state 21
    "id"        shift, and go to state 22
    "iconst"    shift, and go to state 23
    "listfunc"  shift, and go to state 24

    $default  reduce using rule 2 (body)

    labeled_statement   go to state 78
    label               go to state 28
    statement           go to state 29
    simple_statement    go to state 30
    assignment          go to state 31
    variable            go to state 32
    goto_statement      go to state 33
    if_statement        go to state 34
    subroutine_call     go to state 35
    io_statement        go to state 36
    compound_statement  go to state 37
    branch_statement    go to state 38
    loop_statement      go to state 39


State 27

   42 statements: labeled_statement •

    $default  reduce using rule 42 (statements)


State 28

   43 labeled_statement: label • statement

    "continue"  shift, and go to state 13
    "goto"      shift, and go to state 14
    "call"      shift, and go to state 15
    "read"      shift, and go to state 16
    "write"     shift, and go to state 17
    "if"        shift, and go to state 18
    "do"        shift, and go to state 19
    "stop"      shift, and go to state 20
    "return"    shift, and go to state 21
    "id"        shift, and go to state 22
    "listfunc"  shift, and go to state 24

    statement           go to state 79
    simple_statement    go to state 30
    assignment          go to state 31
    variable            go to state 32
    goto_statement      go to state 33
    if_statement        go to state 34
    subroutine_call     go to state 35
    io_statement        go to state 36
    compound_statement  go to state 37
    branch_statement    go to state 38
    loop_statement      go to state 39


State 29

   44 labeled_statement: statement •

    $default  reduce using rule 44 (labeled_statement)


State 30

   46 statement: simple_statement •

    $default  reduce using rule 46 (statement)


State 31

   48 simple_statement: assignment •

    $default  reduce using rule 48 (simple_statement)


State 32

   56 assignment: variable • "assign" expression
   57           | variable • "assign" "string"
   58 variable: variable • "dot" "id"
   59         | variable • "lparen" expressions "rparen"

    "lparen"  shift, and go to state 80
    "assign"  shift, and go to state 81
    "dot"     shift, and go to state 82


State 33

   49 simple_statement: goto_statement •

    $default  reduce using rule 49 (simple_statement)


State 34

   50 simple_statement: if_statement •

    $default  reduce using rule 50 (simple_statement)


State 35

   51 simple_statement: subroutine_call •

    $default  reduce using rule 51 (simple_statement)


State 36

   52 simple_statement: io_statement •

    $default  reduce using rule 52 (simple_statement)


State 37

   47 statement: compound_statement •

    $default  reduce using rule 47 (statement)


State 38

  103 compound_statement: branch_statement •

    $default  reduce using rule 103 (compound_statement)


State 39

  104 compound_statement: loop_statement •

    $default  reduce using rule 104 (compound_statement)


State 40

    1 program: body "end" subprograms •
  109 subprograms: subprograms • subprogram

    "subroutine"  shift, and go to state 83
    "int"         shift, and go to state 6
    "real"        shift, and go to state 7
    "logical"     shift, and go to state 8
    "char"        shift, and go to state 9
    "complex"     shift, and go to state 10
    "list"        shift, and go to state 84

    $default  reduce using rule 1 (program)

    type        go to state 85
    subprogram  go to state 86
    header      go to state 87


State 41

   24 field: "record" • fields "endrec" vars

    "int"      shift, and go to state 6
    "real"     shift, and go to state 7
    "logical"  shift, and go to state 8
    "char"     shift, and go to state 9
    "complex"  shift, and go to state 10
    "record"   shift, and go to state 41

    type    go to state 42
    fields  go to state 88
    field   go to state 44


State 42

   23 field: type • vars

    "list"  shift, and go to state 74
    "id"    shift, and go to state 75

    vars            go to state 89
    undef_variable  go to state 77


State 43

    4 declarations: declarations "record" fields • "endrec" vars
   21 fields: fields • field

    "int"      shift, and go to state 6
    "real"     shift, and go to state 7
    "logical"  shift, and go to state 8
    "char"     shift, and go to state 9
    "complex"  shift, and go to state 10
    "record"   shift, and go to state 41
    "endrec"   shift, and go to state 90

    type   go to state 42
    field  go to state 91


State 44

   22 fields: field •

    $default  reduce using rule 22 (fields)


State 45

   26 vals: "id" • value_list

    "divop"  shift, and go to state 92

    value_list  go to state 93


State 46

    5 declarations: declarations "data" vals •
   25 vals: vals • "comma" "id" value_list

    "comma"  shift, and go to state 94

    $default  reduce using rule 5 (declarations)


State 47

   83 goto_statement: "goto" "id" • "comma" "lparen" labels "rparen"

    "comma"  shift, and go to state 95


State 48

   82 goto_statement: "goto" label •

    $default  reduce using rule 82 (goto_statement)


State 49

   58 variable: variable • "dot" "id"
   59         | variable • "lparen" expressions "rparen"
   88 subroutine_call: "call" variable •

    "lparen"  shift, and go to state 80
    "dot"     shift, and go to state 82

    $default  reduce using rule 88 (subroutine_call)


State 50

   94 read_item: "lparen" • read_list "comma" "id" "assign" iter_space "rparen"

    "id"        shift, and go to state 22
    "listfunc"  shift, and go to state 24
    "lparen"    shift, and go to state 50

    variable   go to state 51
    read_list  go to state 96
    read_item  go to state 53


State 51

   58 variable: variable • "dot" "id"
   59         | variable • "lparen" expressions "rparen"
   93 read_item: variable •

    "lparen"  shift, and go to state 80
    "dot"     shift, and go to state 82

    $default  reduce using rule 93 (read_item)


State 52

   89 io_statement: "read" read_list •
   91 read_list: read_list • "comma" read_item

    "comma"  shift, and go to state 97

    $default  reduce using rule 89 (io_statement)


State 53

   92 read_list: read_item •

    $default  reduce using rule 92 (read_list)


State 54

   76 expression: "new" • "lparen" expression "rparen"

    "lparen"  shift, and go to state 98


State 55

   75 expression: "length" • "lparen" expression "rparen"

    "lparen"  shift, and go to state 99


State 56

   36 simple_constant: "iconst" •

    $default  reduce using rule 36 (simple_constant)


State 57

   37 simple_constant: "rconst" •

    $default  reduce using rule 37 (simple_constant)


State 58

   38 simple_constant: "lconst" •

    $default  reduce using rule 38 (simple_constant)


State 59

   39 simple_constant: "cconst" •

    $default  reduce using rule 39 (simple_constant)


State 60

  102 write_item: "string" •

    $default  reduce using rule 102 (write_item)


State 61

   71 expression: "notop" • expression

    "new"       shift, and go to state 54
    "length"    shift, and go to state 55
    "id"        shift, and go to state 22
    "iconst"    shift, and go to state 56
    "rconst"    shift, and go to state 57
    "lconst"    shift, and go to state 58
    "cconst"    shift, and go to state 59
    "notop"     shift, and go to state 61
    "+ or -"    shift, and go to state 62
    "listfunc"  shift, and go to state 24
    "lparen"    shift, and go to state 100
    "lbrack"    shift, and go to state 64

    simple_constant  go to state 65
    variable         go to state 66
    expression       go to state 101
    listexpression   go to state 68


State 62

   72 expression: "+ or -" • expression

    "new"       shift, and go to state 54
    "length"    shift, and go to state 55
    "id"        shift, and go to state 22
    "iconst"    shift, and go to state 56
    "rconst"    shift, and go to state 57
    "lconst"    shift, and go to state 58
    "cconst"    shift, and go to state 59
    "notop"     shift, and go to state 61
    "+ or -"    shift, and go to state 62
    "listfunc"  shift, and go to state 24
    "lparen"    shift, and go to state 100
    "lbrack"    shift, and go to state 64

    simple_constant  go to state 65
    variable         go to state 66
    expression       go to state 102
    listexpression   go to state 68


State 63

   77 expression: "lparen" • expression "rparen"
   78           | "lparen" • expression "colon" expression "rparen"
  101 write_item: "lparen" • write_list "comma" "id" "assign" iter_space "rparen"

    "new"       shift, and go to state 54
    "length"    shift, and go to state 55
    "id"        shift, and go to state 22
    "iconst"    shift, and go to state 56
    "rconst"    shift, and go to state 57
    "lconst"    shift, and go to state 58
    "cconst"    shift, and go to state 59
    "string"    shift, and go to state 60
    "notop"     shift, and go to state 61
    "+ or -"    shift, and go to state 62
    "listfunc"  shift, and go to state 24
    "lparen"    shift, and go to state 63
    "lbrack"    shift, and go to state 64
